...
    </dependencies>
    <scenes>
        <!--Window Controller-->
        <scene sceneID="zr9-td-UPk">
            <objects>
                <windowController id="hJN-nS-tkV" sceneMemberID="viewController">
                    <window key="window" title="Captured" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="G9P-5Y-a5f">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                        <rect key="contentRect" x="500" y="522" width="480" height="270"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
                        <connections>
                            <outlet property="delegate" destination="hJN-nS-tkV" id="kUT-YS-Dhd"/>
...
            </objects>
            <point key="canvasLocation" x="1004" y="-72"/>
        </scene>
        <!--Accounts-->
        <scene sceneID="obD-ao-oqg">
            <objects>
                <viewController title="Accounts" id="yaz-Nj-fpE" customClass="AccountPreferencesViewController" customModule="Captured" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" id="z7a-fy-5U6">
                        <rect key="frame" x="0.0" y="0.0" width="400" height="300"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="82" horizontalPageScroll="10" verticalLineScroll="82" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Ox-Fa-jKd">
                                <rect key="frame" x="0.0" y="0.0" width="400" height="265"/>
...
                                                                        <binding destination="RAV-Xr-FBA" name="value" keyPath="objectValue.summary" id="jZD-ue-iK0"/>
                                                                    </connections>
                                                                </textField>
                                                                <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0h2-pk-mvL">
                                                                    <rect key="frame" x="320" y="23" width="64" height="32"/>
                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                    <buttonCell key="cell" type="push" title="Edit" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Sfc-i6-2Tw">
                                                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                                        <font key="font" metaFont="system"/>
                                                                    </buttonCell>
                                                                    <connections>
                                                                        <action selector="editAccount:" target="yaz-Nj-fpE" id="XUW-Aj-hUA"/>
                                                                        <binding destination="RAV-Xr-FBA" name="hidden" keyPath="objectValue.readOnly" id="WCB-w4-K9U"/>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                </scroller>
                            </scrollView>
                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YeW-pn-MZC">
                                <rect key="frame" x="268" y="264" width="118" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="push" title="Add Account" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Rl9-yh-IU0">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="newAccountButton:" target="yaz-Nj-fpE" id="DGV-OO-5Y7"/>
                                </connections>
...
                                    <binding destination="2ah-4b-NHi" name="value" keyPath="representedObject.name" id="qZn-DE-nIa"/>
                                </connections>
                            </textField>
                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ta7-KZ-iE2">
                                <rect key="frame" x="366" y="13" width="70" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="push" title="Save" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="CxX-hw-U6a">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="saveButton:" target="y4b-qo-OG1" id="ICH-Xk-YVX"/>
                                </connections>
...
